Imager release history.  Older releases can be found in Changes.old

Imager 0.93_02 - 25 Nov 2012
==============

 - improved thread safety
   - the internal error stack and log file handle are now in a per-thread
     context object
   - JPEG now captures IPTC information in a thread-safe way
   - avoid globals where possible for warning capture in libtiff
   - use a mutex to avoid re-entering thread-unsafe giflib
   - use a mutex to avoid re-entering thread-unsafe tifflib
   - use a mutex to avoid re-entering thread-unsafe T1Lib
   - use a library handle per thread for freetype 2.
   - use an engine handle per thread for freetype 1.x.
   - originally these changes broke ABI compatibility, this has been
     restored.

 - clarify the return value of getpixel();
   https://rt.cpan.org/Ticket/Display.html?id=81198

 - fixed a race condition in parallel testing for T1

 - fixed a bug in handling yoff for untransformed image-based fills

 - documentation improvements for Imager::Fill

 - FT2: report the library version while testing.

Imager 0.93 - 15 Oct 2012
===========

Bug fixes:

 - previously a transparency enabled GIF write (the default) would
   always use a GIF89a header even if none of the images were
   transparent.

 - previously the probe step for freetype-config would fail on cygwin

 - catch an invalid matrix parameter to convert() instead of crashing
   https://rt.cpan.org/Ticket/Display.html?id=79922

 - remove the 16-bit/sample limitation from the documentation for
   setsamples(), it hasn't applied for many releases.
   https://rt.cpan.org/Ticket/Display.html?id=79989

 - don't copy setsamples() data parameter, it may be a large scalar
   https://rt.cpan.org/Ticket/Display.html?id=79990

 - clean up .dSYM directories generated performing probes on OS X
   Mountain Lion.

 - pass the --verbose command-line option through to Imager::Probe in
   sub-module's Makefile.PLs
   https://rt.cpan.org/Ticket/Display.html?id=75878

Enhancements:
